--- a/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Registrar usuarios/styles.css
+++ b/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Registrar usuarios/styles.css
@@ -29,7 +29,7 @@ body {
     background-size: cover;
 }
 
-.header {
+.page__header {
     padding-top: 0.2rem;
     padding-bottom: -0.2rem;
     width: 100%;
@@ -41,13 +41,13 @@ body {
     margin-bottom: 1rem;
 }
 
-.header__logo {
+.page__logo {
     text-align: end;
     margin-top: -8rem;
     padding-right: 10rem;
 }
 
-.header__title {
+.page__title {
     text-align: center;
     padding: 0;
     margin: 0;
@@ -56,7 +56,7 @@ body {
     font-family: var(--font-primary);
 }
 
-.main {
+.page__main {
     width: 90.0rem;
     height: 81.9rem;
     margin: 0 auto;
@@ -79,7 +79,7 @@ body {
     align-items: center;
 }
 
-.form__label {
+.form__group label {
     display: block;
     margin-bottom: 0.5rem;
     font-family: var(--font-primary);
@@ -145,16 +145,16 @@ body {
         font-size: 50%;
     }
 
-    .header {
+    .page__header {
         height: 8rem;
     }
 
-    .header__logo {
+    .page__logo {
         margin-top: -7rem;
         padding-right: 5rem;
     }
 
-    .header__title {
+    .page__title {
         font-size: 4.8rem;
     }
 
@@ -162,7 +162,7 @@ body {
         font-size: 2rem;
     }
 
-    .main {
+    .page__main {
         width: 90%;
         height: auto;
         margin: 0 auto;
