--- a/Lembo/Homes/CSS/stylieshome-insumos-sensores.css
+++ b/Lembo/Homes/CSS/stylieshome-insumos-sensores.css
@@ -95,7 +95,8 @@
   
   /* Contenedor principal */
   .background {
-    background-image: url('/imagenes proyecto/3920db_03d7404410114919ac95cb801302d399~mv2.webp');
+    background-image: url('/Lembo/imagenes proyecto/Cultivos.jpg');
+
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
