--- a/Lembo/Homes/CSS/stylieshome-cultivo.css
+++ b/Lembo/Homes/CSS/stylieshome-cultivo.css
@@ -127,7 +127,7 @@ html, body {
 
 /* Imagen de fondo */
 .background {
-    background-image: url('/imagenes proyecto/cultivos-1.jpg');
+    background-image: url('/Lembo/imagenes proyecto/Linea-Agricola-blog-800-x-445-px.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
