--- a/Lembo/Ciclo de Cultivo/CSS/style_confirmacion.css
+++ b/Lembo/Ciclo de Cultivo/CSS/style_confirmacion.css
@@ -17,7 +17,7 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url(../IMG/granos.webp);
+    background-image: url('/Lembo/imagenes proyecto/Cultivos.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: center;
