--- a/Lembo/Insumos/CSS/style_datos_insumo.css
+++ b/Lembo/Insumos/CSS/style_datos_insumo.css
@@ -76,7 +76,7 @@ h4 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2rem; /* Subir el contenido */
+    margin-top: 2rem; 
     height: calc(100vh - 5rem); /* Ajustar la altura */
     border: 0.1rem solid var(--green);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -87,7 +87,7 @@ h4 {
 .insumo__container {
     width: 90%;
     max-width: 1200px;
-    margin: auto; /* Centrar horizontalmente */
+    margin: auto; 
     display: flex;
     justify-content: center;
     align-items: flex-start;
